// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledArticlesSection renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<div
  className="c0"
/>
`;

exports[`StyledCounterNews renders correctly 1`] = `
.c0 {
  text-align: center;
}

<div
  className="c0"
/>
`;

exports[`StyledHeader renders correctly 1`] = `
.c0 {
  margin-bottom: 2rem;
}

<h3
  className="c0"
/>
`;

exports[`StyledJumbotron renders correctly 1`] = `
.c0 {
  max-width: 700px;
}

.c0.c0 {
  background-color: rgb(250,250,250);
}

<Jumbotron
  className="c0"
  tag="div"
/>
`;
